feat(deploy): prepare Azure App Service deployment